cmake_minimum_required(VERSION 2.6)
project (cv_utils)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-std=c++0x")
#add_definitions(-std=c++11)
#set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)
find_package(PCL REQUIRED COMPONENTS features kdtree)
include_directories(${PCL_LIBRARY_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
file(GLOB SOURCES "*.cpp")
add_library(cv_utils SHARED ${SOURCES} TRW_S/errorFn.cpp)
target_link_libraries(cv_utils ${OpenCV_LIBS})
target_link_libraries(cv_utils ${PCL_FEATURES_LIBRARIES} ${PCL_KDTREE_LIBRARIES})
